Introduced countries in projects form

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -40,7 +40,7 @@
 
     <p>
       <%= f.label :countries %>
-      <%= country_code_select(:project, :countries) %>
+      <%= country_code_select(:project, :countries, nil, {}, {multiple: true}) %>
     </p>
 
     <p>
