List instead of dropdown

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -419,8 +419,8 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
       }
     }
 
-    .countries {
-      margin-top: 20px;
+    div {
+      margin-bottom: 40px;
     }
 
   }
