--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
 
   <%= display_meta_tags :site => 'TrackDons', :reverse => true %>
   
+  <script type="text/javascript" src="http://localhost:4000/ahoy.js"></script>
+  <script>
+    ahoy.trackAll();
+  </script>
+  
 	<style type="text/css">
 	@import url();
 	</style>
