--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -240,6 +240,90 @@ h2 { font-size: 24px; }
 .project a { width: 120px; margin: 0 10px 10px 0; float: left; padding: 5px; height: 60px; text-align: bottom; border: 1px solid #CDD195; }
 .project a { display: block;}
 
+#project_1502 {
+  padding: 0 2em;
+
+  .header {
+    border-top: 5px solid $main_color;
+    position: relative;
+    padding-right: 200px;
+    padding-top: .5em;
+
+    h1 {
+      font-size: 1.6em;
+      display: inline;
+      padding-right: .5em;
+      
+    }
+
+    .links {
+      display: inline-block;
+    }
+
+    .action_buttons {
+      position: absolute;
+      top: 1em; 
+      right: 0;
+      font-size: .75em;
+
+      a {
+        margin-left: 1em;
+      }
+    }
+
+    .donations {
+      color: $main_color;
+      
+    }
+  }
+
+  .description {
+    font-size: .9em;
+    line-height: 1.2em;
+    margin: 2em 0 2em 0;
+  }
+
+  h2 {
+    color: $main-color;
+    border-bottom: 2px solid $main-color;
+    border-top: none;
+    padding: 0 0 .15em 0;
+    font-size: 1.1em;
+    span {
+      # color: lighten($main_color, 10%);
+      opacity: .5;
+    }
+  }
+  /*.donations {
+    width: 70%;
+    float: left;
+    overflow: hidden;
+  }
+  .sidebar {
+    width: 26%;
+    float: right;
+    overflow: hidden;
+  }*/
+
+  // ToDo: make this the default donation style
+  .donation {
+    border: none;
+
+    h2 {
+      border: none;
+      font-size: .9em;
+      color: $secondary_color;
+    }
+    .gravatar {
+      width: 30px;
+      height: 30px;
+    }
+    .donation_comment {
+
+    }
+  }
+}
+
 .donation .tags a { display: inline-block; font-size: 11px; font-weight: normal; color: #666; text-decoration: none; background: #F3E9D1; padding: 2px; margin: 0 6px 0 0;}
 //#donation_do_widget { position: absolute; top: 10px; right: 0; width: 150px; text-align: right; }
 #donation_do_widget { position: absolute; top: 8px; right: 0; text-align: right; }
@@ -263,6 +347,7 @@ h2 { font-size: 24px; }
     float: left; 
     margin-right: 9px; 
     width: 45px; 
+    border-radius: 6px;
   }
   a, a:visited { 
     color: $main-color 
@@ -428,6 +513,12 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
     float: right;
     width: 70%;
   }
+  .main_column.left {
+    float: left;
+  }
+  .sidebar.right {
+    float: right;
+  }
 }
 
 .long_text { width: 500px; font-size: 14px; }
@@ -506,7 +597,7 @@ iPad 3
 
 @media only screen  and (max-width : 880px) {
   body { margin: 0; padding: 0; }
-  #container { width: auto; margin: 0 0 2em 0; border-width: 15px}
+  #container { width: auto; margin: 0 0 2em 0; border-width: 0; }
   #header { position: relative; padding: 10px 0;}
     #nav_site { }
     #nav_personal { position: absolute; top: 10px; right: 10px; text-align: left; }
@@ -548,6 +639,29 @@ iPad 3
       a {
         height: auto;
       }
+    }
+  }
+
+  .wide_content {
+    .main_column, .sidebar {
+      float: none; 
+      width: 100%; 
+      clear: both;
+      margin-bottom: 2em;
+    }
+    .main_column {
+      .project a {
+        width: 28%;
+        margin: 0 2% 2% 0;
+        padding: 1%;
+      }
+      .project:nth-child(3n+0) a {
+        margin-left: 0;
+      }
+    }
+    .sidebar li {
+      font-size: 1.2em;
+      line-height: 1.6em;
     }
   }
   
