--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,5 +1,8 @@
 <div class="donation" id="donation-<%= donation.id %>">
+  
   <%= gravatar_for(donation.user, size: 45) %>
+
+  <div class="line"></div>
 
   <h2>
     <% if donation.private? && (!logged_in? || donation.user != current_user) %>
