--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(donation_for_form) do |f| %>
-
-  <div class="main_form">
+  
+  <div class="bb-donation" data-projects="<%= projects_path %>">
+    <div class="js-donations mb2">
 
     <% if new_donation? %>
       <div class="track_don_project">
@@ -14,66 +15,84 @@
           </div>
           <%= f.hidden_field :project_id, value: @project.id %>
         <% else %>
-          
-          <%= f.fields_for(:project) do |project_form| %>
-            <%= project_form.hidden_field :name, data: {projects_url: projects_path}, :class => "js-select2" %>
-            <div class="hint"><%= project_form.label(:name, 'ie. Wikipedia, Redd Cross, UNR') %></div>
-
-            <div id="project_attributes">
-              <%= project_form.text_area :description %>
-              <div class="hint"><%= project_form.label(:description, 'Project Description') %></div>
-              <%= project_form.text_field :url %>
-              <div class="hint"><%= project_form.label(:url, 'Project URL') %></div>
+          <div class="justify-columns donations-holder">
+            <div class="form-group justify-item forty percent" id="donation-<%= @project %>">
+              <%= f.fields_for(:project) do |project_form| %>
+                <div class="form-label uppercase">
+                  <%= project_form.label(:name, I18n.t('donation.project')) %>
+                </div>
+                <div class="form-fields">
+                  <%= project_form.text_field :name, :class => "hundred percent js-select2" %>
+                </div>
+              <% end %>
+            </div>
+            
+            <div class="form-group justify-item">
+              <div class="form-label uppercase">
+                <%= f.label(:quantity, I18n.t('donation.amount')) %>
+              </div>
+              <div class="form-fields">
+                <div class="field-group">
+                  <%= f.text_field :quantity, placeholder: 'ie. 125', :class => "donation-amount field-text field-group-item" %>
+                  <div class="field-select field-group-item">
+                    <%= f.select :currency, [['€', 'EUR'],['$', 'USD']] %>
+                  </div>
+                </div>
+              </div>
             </div>
 
-          <% end %>
+            <div class="form-group justify-item">
+              <div class="form-label uppercase">
+                <%= f.label(:frequency_period, t('donation.recurring')) %> 
+              </div>
+              <div class="form-fields">
+                <div class="field-select field-group-item">
+                  <!-- How the hell is built this field -->
+                  
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group justify-item">
+              <div class="form-label uppercase">
+                <%= f.label(:date, t('donation.date'), :class => 'js-donation-date') %> 
+              </div>
+              <div class="form-fields">
+                <%= f.text_field :date, :placeholder => t('donation.pick_date'), :class => "donation-date field-text", :data => {:behaviour => "datepicker"} %>
+              </div>
+            </div>
+
+            <div class="form-group justify-item">
+              <div class="form-label uppercase">
+                <%= f.label(:quantity_privacy, t('donation.private'), :title => t('donations.form.quantity_privacy_hint'), :class => 'tipsit') %> 
+              </div>
+              <div class="form-fields solid">
+                <%= f.check_box :quantity_privacy %>
+                <%= f.label(:quantity_privacy, 'Yes') %> 
+              </div>
+            </div>
+          </div>
+          <div class="js-details donation-details mt2 justify-item hundred percent">
+            <%= f.fields_for(:project) do |project_form| %>
+              <%= project_form.text_area :description, :placeholder => t('donation.description'), :class => "field-textarea hundred percent mb2" %>
+              <%= project_form.text_field :url, :placeholder => t('donation.url'), :class => "field-text hundred percent" %>
+            <% end %>
+          </div>
         <% end %>
         
       </div>
+
+      <div id="add-donation" class="js-add-donation s11">
+        <a href="#"><%= I18n.t('donation.add') %></a>
+      </div>
+
+    </div>
+
     <% else %>
       <div class="track_don_project">
         <h2><%= t('.edit_your_donation', name: @project.name) %></h2>
       </div>
     <% end %>
-
-    <div class="track_don_date">
-      <%= f.date_field :date %>
-
-      <div class="hint"><%= f.label(:date, t('when_did_you_donate')) %></div>
-    </div>
-
-    <div class="track_don_quantity_B">
-      <div class="track_don_quantity_B_option">
-        <%= f.text_field :quantity, placeholder: '125' %>
-
-        <div class="track_don_currency_selector">
-          <%= f.select :currency, [['€', 'EUR'],['$', 'USD']] %>
-        </div>
-
-        <div class="track_don_quantity_B_option_hint">
-          <%= f.check_box :quantity_privacy %>
-          <%= f.label(:quantity_privacy, t('donations.show.keep_the_quantity_private'), title: t('.quantity_privacy_hint'), class: 'tipsit') %>
-        </div>
-      </div>
-      <div class="hint"><%= f.label(:quantity, t('how_much_question')) %></div>
-    </div>
-
-  </div>
-
-  <div class="track_don_options">
-
-    <div>
-      <label>
-        <%= f.check_box :show_comment, id: 'i_want_to_explain' %>
-        <%= t('i_want_to_explain_why') %>
-      </label>
-
-      <div id="i_want_to_explain_content">
-        <%= f.text_area(:comment) %>
-      </div>
-    </div>
-
-  </div>
 
   <% unless new_donation? %>
     <%= hidden_field_tag :back_url, project_path(@project) %>
