--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -21,27 +21,9 @@
 
     </div>
 
-    <div class="action_buttons">
-      <%# link_to t('.follow'), track_donation_path, :class => 'button not_active' %>
 
-      <% if current_user.following?(@project) %>
-        <%# button_to("Un-Follow", project_unfollow_path(@project), :method => :patch, :remote => true, ) %>
-        <%= link_to "Unfollow", project_unfollow_path(@project),
-              :remote => true,
-              :method => :patch,
-              :class => "button unfollow",
-              :id => 'follow_button' %>
-      <% else %>
-        <%# button_to("Follow", project_follow_path(@project), :method => :patch, :remote => true) %>
-        <%= link_to "Follow", project_follow_path(@project),
-              :remote => true,
-              :method => :patch,
-              :class => "button follow",
-              :id => 'follow_button' %>
-      <% end %>
-      </span>
-    
-      <%= link_to t('.trackdon'), '#track_donation', :class => 'button' %>
+    <div class="action_buttons" id="action_buttons">
+      <%= render 'action_buttons' %>
     </div>
 
   </div>
