Project page WIP, donation style updated

--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -1,6 +1,6 @@
-<section class="content_column">
+<section id="track_donation" class="content_full">
 
-  <div class="tracked_donation">
+  <div class="content_column tracked_donation">
     <% if params[:share_links].present? %>
       <small><%= t('donations.show.your_tracked_donation') %></small>
     <% end %>
