--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
 <% set_meta_tags :description => t('metas.projects.home.description') %>
 <% set_meta_tags :keywords => t('metas.projects.home.keywords') %>
 
-<section class="wide_content">
+<section class="wide_content projects">
 
   <div class="main_column">
 
