--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <% set_meta_tags :description => t('metas.projects.project.description', :name => @project.name) %>
 <% set_meta_tags :keywords => "#{@project.name}, donation, promote, issues, reach, track donation" %>
 
-<section id="project_1502" class="wide_content">
+<section id="project" class="project_page wide_content">
 
   <div class="header">
 
@@ -53,7 +53,6 @@
     <div class="updates">
 
       <h2><%= t '.updates' %></h2>
-
       
     </div>
 
