--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -250,7 +250,15 @@ h2 { font-size: 24px; }
 .project a { width: 120px; margin: 0 10px 10px 0; float: left; padding: 5px; height: 60px; text-align: bottom; border: 1px solid #CDD195; }
 .project a { display: block;}
 
-#project_1502 {
+.projects_index {
+  .sidebar {
+    h2 {
+      border-top: 5px solid #7c9200;
+      font-size: 1.2em;
+    }
+  }
+}
+.project_page {
   padding: 0 2em;
 
   .header {
@@ -304,9 +312,15 @@ h2 { font-size: 24px; }
     border-top: none;
     padding: 0 0 .15em 0;
     font-size: 1.1em;
+    margin: 0 0 1em 0;
     span {
       # color: lighten($main_color, 10%);
       opacity: .5;
+    }
+  }
+  .main_column {
+    h2 {
+      margin: 0 0 2em 0;
     }
   }
   /*.donations {
@@ -324,43 +338,9 @@ h2 { font-size: 24px; }
     margin-bottom: 1em;
   }
 
-  // ToDo: make this the default donation style
-  .donation {
-    position: relative;
-    border: none;
-    padding: 1em;
-    margin: -1em -1em 1em -1em;
-
-    .line {
-      position: absolute;
-      left: 30px;
-      top: 46px;
-      width: 2px;
-      background: $light_background;
-      height: 100%;
-
-    }
-    h2 {
-      border: none;
-      font-size: .9em;
-      color: $secondary_color;
-    }
-    .gravatar {
-      width: 30px;
-      height: 30px;
-      margin-right: 13px;
-    }
-    .donation_comment, .donation_tools {
-      margin: 0 0 0 42px;
-      font-size: .8em;
-    }
-    #donation_do_widget {
-      display: none;
-    }
-  }
-  .donation:hover {
-    background: $light_background;
-    border-radius: 6px;
+  #unfollow_button {
+    width: 58px;
+    text-align: center;
   }
 }
 
@@ -371,7 +351,56 @@ h2 { font-size: 24px; }
 #donation_do_widget .donation_do { display: inline-block; }
 #donation_do_widget .button { padding: 4px 10px; font-size: 12px; margin: 0; }
 
-.donation { 
+.donation {
+  position: relative;
+  border: none;
+  padding: 1em;
+  margin: -1em -1em 1em -1em;
+
+  .line {
+    position: absolute;
+    left: 30px;
+    top: 46px;
+    width: 2px;
+    background: $light_background;
+    height: 100%;
+
+  }
+  .gravatar {
+    width: 30px;
+    height: 30px;
+    margin-right: 13px;
+    float: left;
+    border-radius: 6px;
+  }
+  .donation_comment, .donation_tools {
+    margin: 0 0 0 42px;
+    font-size: .8em;
+  }
+  h3 { 
+    border: none;
+    color: $secondary_color;
+    font-size: 1em;
+    color: #666; 
+    margin: 0 10px 10px 0;
+    border: none;
+
+    .date {
+      opacity: .5;
+      font-weight: normal;
+    }
+  }
+  p.donation_date { color: #AFACA4; }
+}
+.donation:hover {
+  background: $light_background;
+  border-radius: 6px;
+}
+
+/*#project */.donation #donation_do_widget {
+  display: none;
+}
+/*.donation { 
   border-top-width: 1px; 
   border-top-style: solid; 
   padding-top: 10px; 
@@ -392,29 +421,8 @@ h2 { font-size: 24px; }
   a, a:visited { 
     color: $main-color 
   }
-  h2 { 
-    font-size: 18px; 
-    color: #666; 
-    margin: 0 110px 10px 0;
-
-    .date {
-      opacity: .5;
-      font-weight: normal;
-    }
-  }
-  .donation_comment, .donation_tools {
-    font-size: 14px; 
-    margin: 0 120px 0 54px; 
-
-    p {
-      margin-top: 0; 
-    }
-  }
-  .donation_tools {
-    font-size: 11px;
-  }
-  p.donation_date { color: #AFACA4; }
-}
+  
+}*/
 small { font-size: 11px; }
 hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; width: 100%; }
 
@@ -492,9 +500,7 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
   .sidebar, .main_column {
     /*border: 1px solid red;*/
   }
-  h2 {
-    font-size: 1.2em;
-    border-top: 5px solid $main_color;
+  /*h2 {
     color: $secondary_color;
     padding: .5em 0 0 0;
     margin: 0 0 1em 0;
@@ -504,7 +510,7 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
     color: $secondary_color;
     padding: .5em 0 0 0;
     margin: 0 0 1em 0;
-  }
+  }*/
   
   section.header {
     border-top: 5px solid $main_color;
@@ -536,6 +542,10 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
       margin: 0; 
       padding: 0; 
       list-style-type: none;
+
+      li {
+        margin-bottom: 1em;
+      }
     }
 
     .categories, .countries {
@@ -543,7 +553,6 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
         text-decoration: none;
       }
     }
-
     div {
       margin-bottom: 40px;
     }
@@ -564,16 +573,37 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
 .long_text { width: 500px; font-size: 14px; }
 .long_text p, .long_text ul, .long_text li { line-height: 22px; }
 
-.user_page {}
-.user_page header { padding: 20px; position: relative;}
-.user_page header h1 { font-size: 28px; margin: 0 0 0 72px; }
-.user_page header img { vertical-align: middle; position: absolute; top: 0; left: 0; }
-#donations_last_month { position: absolute; top: 25px; left: 300px; }
+#user_donations {
+  position: relative;
+  #donations_chart { 
+    position: absolute; 
+    top: 6px; 
+    right: 20px;
+  }
+}
+.user_page {
+
+  header { padding: 20px; position: relative;}
+  header h1 { font-size: 28px; margin: 0 0 0 72px; }
+  header img { vertical-align: middle; position: absolute; top: 0; left: 0; }
+
+  h2 {
+    color: $main-color;
+    border-bottom: 2px solid $main-color;
+    border-top: none;
+    padding: 0 0 .15em 0;
+    font-size: 1.1em;
+  }
+    
+}
+#donations_last_month { position: absolute; top: 25px; left: 450px; }
 #donations_last_month small { display: block}
-#donations_overall { position: absolute; top: 25px; left: 400px; }
-#donations_chart { position: absolute; top: 22px; left: 550px; }
+#donations_overall { position: absolute; top: 25px; left: 600px; }
 #donations_last_month, #donations_overall { font-size: 14px; }
-#user_nav { margin: 20px 0;}
+#user_nav { 
+  margin: 20px 0;
+  overflow: hidden;
+}
 #edit_your_profile { float: right; }
 
 .ui-autocomplete { border: 1px solid red; }
@@ -665,7 +695,7 @@ iPad 3
   .main_form {
 
   }
-  .donation h2 { font-size: 16px; }
+  .donation h3 { font-size: 16px; }
   .track_don_project {
     width: 100%;
   }  
