--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,37 +8,7 @@
 
     <h2><%= title t('.update_your_profile') %></h2>
 
-    <%= form_for(@user, html: {class: "simple_form"}) do |f| %>
-
-      <%= render 'shared/error_messages' %>
-
-      <p>
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control' %>
-      </p>
-
-      <p>
-        <%= f.label :email %>
-        <%= f.text_field :email, class: 'form-control' %>
-      </p>
-
-      <p>
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control' %>
-      </p>
-
-      <p>
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-      </p>
-
-      <p>
-        <%= f.label :country %>
-        <%= country_code_select(:user, :country) %>
-      </p>
-
-      <%= f.submit t('.save') %>
-    <% end %>
+    <%= render 'form' %>
 
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
